--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^2.2.1",
+    "@astrojs/sitemap": "^1.3.3",
     "astro": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
