--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "react-dom": "^18.2.0",
     "sass": "^1.63.6",
     "swiper": "^9.4.1"
+  },
+  "devDependencies": {
+    "@astrojs/partytown": "^1.2.3"
   }
 }
